--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -80,12 +80,13 @@ h2 a {
 }
 
 .container th {
-    padding: 10px;
+    padding: 8px; /* Adjusted padding for header size */
     background-color: rgba(31, 39, 57, 0.9);
     border-bottom: 2px solid #4DC3FA;
     color: #4DC3FA;
     font-weight: bold;
     text-transform: uppercase;
+    font-size: 1.2em; /* Adjusted font size for header text */
 }
 
 .container td {
