--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -2,20 +2,21 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     line-height: 1.42em;
-    color: #b8b8b8;
-    background: linear-gradient(135deg, #1F2739 0%, #2C3446 100%);
+    color: #202020;
+    background-color: #FFEAC5;
+    margin: 0;
+    /* Reset body margin */
 }
 
 body::before {
     content: '';
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: radial-gradient(circle, transparent 20%, #1F2739 120%);
     opacity: 0.7;
-    z-index: -1;
+    margin: 0 auto;
 }
 
 h1 {
@@ -46,7 +47,9 @@ h2 a {
     overflow-y: auto;
     border-radius: 20px;
     width: 1200px;
-    margin: 0 auto;
+    margin: 50px auto;
+    /* Added margin for spacing above and below the table */
+    position: relative;
 }
 
 .table-wrapper::-webkit-scrollbar {
@@ -79,14 +82,32 @@ h2 a {
     border-spacing: 0;
 }
 
-.container th {
-    padding: 8px; /* Adjusted padding for header size */
+.container thead {
+    position: sticky;
+    /* Make the header sticky */
+    top: 0;
+    /* Position it at the top of the table */
+    z-index: 10;
+    /* Ensure it stays above the table body */
     background-color: rgba(31, 39, 57, 0.9);
-    border-bottom: 2px solid #4DC3FA;
-    color: #4DC3FA;
+}
+
+.container th {
+    padding: 8px;
+    /* Adjusted padding for header size */
+    background-color: #603F26;
+    border-bottom: 2px solid #FFDBB5;
+    color: #FFDBB5;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 1.2em; /* Adjusted font size for header text */
+    font-size: 1.2em;
+    /* Adjusted font size for header text */
+}
+
+.container th a:hover {
+    background-color: #982B1C;
+    box-shadow: 0 6px 6px -6px #0E1119;
+    transition: all 0.3s ease;
 }
 
 .container td {
@@ -96,15 +117,15 @@ h2 a {
 }
 
 .container tr:nth-child(odd) {
-    background-color: rgba(50, 60, 80, 0.8);
+    background-color: #FFF8E8;
 }
 
 .container tr:nth-child(even) {
-    background-color: rgba(44, 52, 70, 0.8);
+    background-color: #F7EED3;
 }
 
 .container tr:hover {
-    background-color: rgba(89, 89, 73, 0.9);
+    background-color: #E8B86D;
     box-shadow: 0 6px 6px -6px #0E1119;
     transition: all 0.3s ease;
 }
@@ -113,18 +134,12 @@ h2 a {
     display: inline-block;
     padding: 8px 12px;
     margin: 0 10px;
-    background-color: #185875;
+    background-color: #6C4E31;
     color: white;
     text-decoration: none;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease;
-}
-
-.th a:hover {
-    background: linear-gradient(135deg, #72BF78 0%, #9BE0A8 100%);
-    transform: translateY(-2px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
 
 /* Responsive Styles */
