--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,3 +1,7 @@
+/* Import Boxicons */
+@import url('https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css');
+
+/* General Styles */
 body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
@@ -6,18 +10,6 @@ body {
     background-color: #FFEAC5;
     margin: 0;
     /* Reset body margin */
-}
-
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle, transparent 20%, #1F2739 120%);
-    opacity: 0.7;
-    z-index: -1;
 }
 
 h1 {
@@ -44,6 +36,7 @@ h2 a {
     text-decoration: none;
 }
 
+/* Table Wrapper */
 .table-wrapper {
     max-height: 600px;
     overflow-y: auto;
@@ -66,6 +59,7 @@ h2 a {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+/* Table Styles */
 .container {
     text-align: left;
     width: 100%;
