--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,11 +1,8 @@
-/* Import Boxicons */
 @import url('https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-/* General Styles */
 .action-buttons {
     width: 150px;
-    /* Adjust the width as needed */
     text-align: center;
 }
 
@@ -40,7 +37,6 @@ body {
     color: #202020;
     background-color: #D2C9AC;
     margin: 0;
-    /* Reset body margin */
 }
 
 h1 {
@@ -67,30 +63,28 @@ h2 a {
     text-decoration: none;
 }
 
-/* Table Wrapper */
 .table-wrapper {
     max-height: 600px;
     overflow-y: auto;
     border-radius: 10px;
-    width: 90%;
+    width: 100%;
     max-width: 1200px;
-    margin: 50px auto;
+    margin: 100px auto;
     position: relative;
 }
 
 .table-wrapper::-webkit-scrollbar {
-    width: 6px;
-}
-
-.table-wrapper::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    width: 5px;
 }
 
 .table-wrapper::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* Table Styles */
+.table-wrapper:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .container {
     text-align: left;
     width: 100%;
@@ -118,14 +112,13 @@ h2 a {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 1rem;
-
 }
 
 .container td {
     padding: 10px;
     font-size: 1rem;
     box-shadow: 0 2px 2px -2px #0E1119;
-    border-left: 0.01px solid #3f3c36;
+    border-right: 0.01px solid #3f3c36;
 }
 
 .container tr:nth-child(odd) {
@@ -166,7 +159,6 @@ h2 a {
     transition: all 0.3s ease;
 }
 
-/* Responsive Styles */
 @media (max-width: 1024px) {
     .table-wrapper {
         width: 95%;
